--- a/client/app/src/main/res/layout/activity_main.xml
+++ b/client/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/sv_main_activity"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainActivity"
     android:orientation="vertical"  >
@@ -12,6 +13,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        android:id="@+id/ll_main_activity"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -31,11 +33,12 @@
             <ScrollView
                 android:id="@+id/scroll_network_list"
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
+                android:layout_height="350dp"
                 android:layout_marginBottom="8dp"
                 android:layout_marginEnd="20dp"
                 android:layout_marginStart="20dp"
-                android:layout_marginTop="8dp">
+                android:layout_marginTop="8dp"
+                android:background="@color/themedarker">
 
                 <!-- Aditya, this is your class. -->
                 <com.example.eric.wishare.WiConfiguredNetworkListView
@@ -54,20 +57,21 @@
 
         </LinearLayout>
 
-        <LinearLayout
+        <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:id="@+id/ll_bottom_main_activity">
             <Button
                 android:id="@+id/btn_show_notification"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="40dp"
                 android:layout_marginStart="40dp"
-                android:layout_marginTop="60dp"
                 style="@drawable/ripple"
                 android:background="@drawable/ripple"
-                android:text="@string/btn_show_notification" />
+                android:text="@string/btn_show_notification"
+                app:layout_constraintBottom_toTopOf="@id/btn_add_network"/>
 
             <Button
                 android:id="@+id/btn_add_network"
@@ -75,30 +79,32 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="40dp"
                 android:layout_marginStart="40dp"
-                android:layout_marginTop="10dp"
                 style="@drawable/ripple"
                 android:background="@drawable/ripple"
-                android:text="@string/btn_add_network" />
+                android:text="@string/btn_add_network"
+                app:layout_constraintBottom_toTopOf="@id/btn_manage_contacts"/>
             <Button
                 android:id="@+id/btn_manage_contacts"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="40dp"
                 android:layout_marginStart="40dp"
-                android:layout_marginTop="10dp"
                 style="@drawable/ripple"
                 android:background="@drawable/ripple"
-                android:text="@string/btn_manage_contacts" />
+                android:text="@string/btn_manage_contacts"
+                app:layout_constraintBottom_toTopOf="@id/btn_my_invitations"/>
 
             <com.example.eric.wishare.WiMyInvitationsButton
                 android:id="@+id/btn_my_invitations"
                 android:layout_width="match_parent"
                 android:layout_marginEnd="40dp"
                 android:layout_marginStart="40dp"
-                android:layout_marginTop="10dp"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                app:layout_constraintBottom_toBottomOf="parent"/>
 
-        </LinearLayout>
+
+        </android.support.constraint.ConstraintLayout>
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
