--- a/client/app/src/main/res/layout/layout_my_invitations_button.xml
+++ b/client/app/src/main/res/layout/layout_my_invitations_button.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/ll_my_invitations"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:layout_gravity="right">
 
@@ -17,13 +17,16 @@
             android:gravity="center"
             android:layout_gravity="center"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            style="@drawable/ripple"
+            android:background="@drawable/ripple"/>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="right">
+        android:gravity="right"
+        android:paddingEnd="93dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -31,8 +34,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/circle"
             android:textAlignment="center"
-            android:textColor="#f2f2f2"
-            android:text="5"/>
+            android:textColor="#f2f2f2"/>
 
     </LinearLayout>
 </RelativeLayout>
