--- a/client/app/src/main/res/layout/activity_main.xml
+++ b/client/app/src/main/res/layout/activity_main.xml
@@ -6,20 +6,16 @@
     android:id="@+id/sv_main_activity"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainActivity"
-    android:orientation="vertical"  >
+    android:orientation="vertical">
 
-
-    <LinearLayout
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:id="@+id/ll_main_activity"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
         <LinearLayout
+            android:id="@+id/ll_top_main_activity"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/ll_bottom_main_activity"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
             android:orientation="vertical">
             <TextView
                 android:layout_marginTop="10dp"
@@ -33,7 +29,7 @@
             <ScrollView
                 android:id="@+id/scroll_network_list"
                 android:layout_width="match_parent"
-                android:layout_height="350dp"
+                android:layout_height="match_parent"
                 android:layout_marginBottom="8dp"
                 android:layout_marginEnd="20dp"
                 android:layout_marginStart="20dp"
@@ -44,7 +40,7 @@
                 <com.example.eric.wishare.WiConfiguredNetworkListView
                     android:layout_width="match_parent"
                     android:orientation="vertical"
-                    android:layout_height="200dp"
+                    android:layout_height="match_parent"
                     android:layout_marginBottom="8dp"
                     android:layout_marginEnd="20dp"
                     android:layout_marginStart="20dp"
@@ -57,9 +53,11 @@
 
         </LinearLayout>
 
-        <android.support.constraint.ConstraintLayout
+        <LinearLayout
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/ll_top_main_activity"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             android:id="@+id/ll_bottom_main_activity">
             <Button
@@ -71,6 +69,7 @@
                 style="@drawable/ripple"
                 android:background="@drawable/ripple"
                 android:text="@string/btn_show_notification"
+                app:layout_constraintTop_toBottomOf="@id/ll_bottom_main_activity"
                 app:layout_constraintBottom_toTopOf="@id/btn_add_network"/>
 
             <Button
@@ -82,6 +81,7 @@
                 style="@drawable/ripple"
                 android:background="@drawable/ripple"
                 android:text="@string/btn_add_network"
+                app:layout_constraintTop_toBottomOf="@id/btn_show_notification"
                 app:layout_constraintBottom_toTopOf="@id/btn_manage_contacts"/>
             <Button
                 android:id="@+id/btn_manage_contacts"
@@ -92,6 +92,7 @@
                 style="@drawable/ripple"
                 android:background="@drawable/ripple"
                 android:text="@string/btn_manage_contacts"
+                app:layout_constraintTop_toBottomOf="@id/btn_manage_contacts"
                 app:layout_constraintBottom_toTopOf="@id/btn_my_invitations"/>
 
             <com.example.eric.wishare.WiMyInvitationsButton
@@ -104,7 +105,6 @@
                 app:layout_constraintBottom_toBottomOf="parent"/>
 
 
-        </android.support.constraint.ConstraintLayout>
-    </LinearLayout>
+        </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
