--- a/client/app/src/main/res/layout/layout_my_invitations_button.xml
+++ b/client/app/src/main/res/layout/layout_my_invitations_button.xml
@@ -1,32 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/ll_my_invitations"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:layout_gravity="right">
 
-    <LinearLayout
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="right">
+        android:gravity="center"
+        style="@drawable/ripple"
+        android:background="@drawable/ripple">
         <Button
             android:text="My Invitations"
             android:id="@+id/btn_my_invitations2"
             android:gravity="center"
             android:layout_gravity="center"
-            android:layout_width="match_parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@drawable/ripple"
             android:background="@drawable/ripple"/>
-    </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="right"
-        android:paddingEnd="93dp">
+        app:layout_constraintLeft_toRightOf="@id/btn_my_invitations2">
 
         <TextView
             android:layout_width="wrap_content"
@@ -37,4 +39,6 @@
             android:textColor="#f2f2f2"/>
 
     </LinearLayout>
+
+    </android.support.constraint.ConstraintLayout>
 </RelativeLayout>
