--- a/client/app/src/main/res/layout/layout_invitation_list_item.xml
+++ b/client/app/src/main/res/layout/layout_invitation_list_item.xml
@@ -5,48 +5,112 @@
     android:paddingLeft="12dp"
     android:background="@drawable/ripple"
     style="@drawable/ripple"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <TextView
-        android:layout_marginTop="10dp"
-        android:id="@+id/tv_invitation_title"
-        android:layout_width="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Invitation to 'belkin-0615'"
-        android:textSize="16dp"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:paddingRight="15dp"
+        android:orientation="horizontal">
+        <View
+            android:id="@+id/horizontal_line"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:paddingBottom="20dp"
+            android:background="@color/themedarkest"/>
         <TextView
-            android:layout_width="60dp"
-            android:layout_height="wrap_content"
-            android:text="Owner:"/>
-
-        <TextView
-            android:id="@+id/tv_invitation_owner"
-            android:paddingLeft="8dp"
+            android:layout_marginTop="10dp"
+            android:id="@+id/tv_invitation_title"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Eric Pratt"/>
-    </LinearLayout>
-
-    <!--
-    <LinearLayout
+            android:layout_height="30dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/horizontal_line"
+            android:text="Invitation to 'belkin-0615'"
+            android:textSize="16sp"/>
+        <ImageView
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:paddingRight="15dp"
+            android:src="@drawable/ic_expand_foreground"/>
+    </android.support.constraint.ConstraintLayout>
+    <net.cachapa.expandablelayout.ExpandableLayout
+        android:id="@+id/expandable_layout_invitation"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="60dp"
-            android:layout_height="wrap_content"
-            android:text="Expires:"/>
+        android:layout_height="wrap_content"
+        android:paddingBottom="5dp"
+        app:el_duration="500"
+        app:el_expanded="false"
+        app:el_parallax="0.5">
 
-        <TextView
-            android:id="@+id/tv_invitation_expiration"
-            android:paddingLeft="8dp"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Never"/>
-    </LinearLayout>
-    -->
+            android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="60dp"
+                    android:layout_height="wrap_content"
+                    android:text="Owner:"/>
+
+                <TextView
+                    android:id="@+id/tv_invitation_owner"
+                    android:paddingLeft="8dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Eric Pratt"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="60dp"
+                    android:layout_height="wrap_content"
+                    android:text="Expires:"/>
+
+                <TextView
+                    android:id="@+id/tv_invitation_expiration"
+                    android:paddingLeft="8dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Never"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:weightSum="2">
+                <Button
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Accept"
+                    android:textColor="@color/themeGreen"
+                    style="@drawable/ripple"
+                    android:background="@drawable/ripple"/>
+                <Button
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Decline"
+                    android:textColor="@color/themeGreen"
+                    style="@drawable/ripple"
+                    android:background="@drawable/ripple"/>
+            </LinearLayout>
+            <!--<View-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="1dp"-->
+                <!--android:background="@color/themedarkest"-->
+                <!--android:paddingBottom="3dp"/>-->
+        </LinearLayout>
+
+    </net.cachapa.expandablelayout.ExpandableLayout>
+
 
 </LinearLayout>
