--- a/client/app/src/main/res/layout/activity_main.xml
+++ b/client/app/src/main/res/layout/activity_main.xml
@@ -121,6 +121,7 @@
                 android:layout_marginStart="40dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
+                android:background="@drawable/ripple"
                 app:layout_constraintBottom_toBottomOf="parent"/>
         </LinearLayout>
 
