--- a/client/app/src/main/res/layout/layout_my_invitations_button.xml
+++ b/client/app/src/main/res/layout/layout_my_invitations_button.xml
@@ -11,19 +11,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        style="@drawable/ripple"
         android:background="@drawable/ripple">
         <Button
             android:text="My Invitations"
             android:id="@+id/btn_my_invitations2"
             android:gravity="center"
+            android:clickable="false"
             android:layout_gravity="center"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@drawable/ripple"
-            android:background="@drawable/ripple"/>
+            android:background="@null"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
